--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meloria</title>
+    <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="css/App.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div id="app"></div>
